--- a/.astropod/social.config.json
+++ b/.astropod/social.config.json
@@ -6,5 +6,6 @@
   "github": "",
   "telegram": "",
   "linkedin": "",
-  "newsletter": ""
+  "newsletter": "",
+  "discord": "https://discord.gg/unfunny.co"
 }
