--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -14,7 +14,7 @@
   "language": "en",
   "link": "https://unfunny.co",
   "email": "contact@unfunny.co",
-  "description": "A short description of your podcast. We suggest creating a podcast description between 600-900 characters or 120-170 words in length.",
+  "description": "We're just idiots on the internet",
   "category": [
     "Comedy",
     "Gaming"
